--- a/sshchesnyak_kts_android_09_2021/app/src/main/res/values-ru/strings.xml
+++ b/sshchesnyak_kts_android_09_2021/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Реддит</string>
     <string name="subtext">Добро пожаловать в сообщество!</string>
     <string name="button_text">Поехали!</string>
+
+    <string name="login_text">Адрес электронной почты</string>
+    <string name="password_text">Пароль</string>
+    <string name="authentication_text">Войти</string>
+    <string name="helper_text">Добро пожаловать!</string>
 </resources>
