--- a/sshchesnyak_kts_android_09_2021/app/src/main/res/values/strings.xml
+++ b/sshchesnyak_kts_android_09_2021/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Reddit</string>
     <string name="subtext">Welcome to the community!</string>
     <string name="button_text">Lets Go!</string>
+
+    <string name="login_text">E-mail</string>
+    <string name="password_text">Password</string>
+    <string name="authentication_text">Login</string>
+    <string name="helper_text">Welcome!</string>
 </resources>
