--- a/sshchesnyak_kts_android_09_2021/app/src/main/res/values/strings.xml
+++ b/sshchesnyak_kts_android_09_2021/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="password_text">Password</string>
     <string name="authentication_text">Login</string>
     <string name="helper_text">Welcome!</string>
+
+    <string name="author_signature">Serge Shchesnyak</string>
+    <string name="date_signature">01/01/2021</string>
+    <string name="post_title">Sample title</string>
+    <string name="post_text_content">This is a little bit of sample article text for you.</string>
 </resources>
